--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx tsc && node build/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "gts lint",
+    "clean": "gts clean",
+    "compile": "tsc",
+    "fix": "gts fix",
+    "prepare": "npm run compile",
+    "pretest": "npm run compile",
+    "posttest": "npm run lint"
   },
   "repository": {
     "type": "git",
@@ -16,9 +24,16 @@
     "url": "https://github.com/amalik12/deck-ready/issues"
   },
   "homepage": "https://github.com/amalik12/deck-ready#readme",
-  "type": "module",
   "dependencies": {
-    "node-fetch": "^3.2.0",
+    "express": "^4.17.2",
+    "node-fetch": "^2.6.7",
     "steam-user": "^4.20.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^14.11.2",
+    "@types/steam-user": "^4.20.0",
+    "gts": "^3.1.0",
+    "typescript": "^4.5.5"
   }
 }
