--- a/package.json
+++ b/package.json
@@ -25,14 +25,18 @@
   },
   "homepage": "https://github.com/amalik12/deck-ready#readme",
   "dependencies": {
+    "body-parser": "^1.19.2",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "node-fetch": "^2.6.7",
-    "steam-user": "^4.20.2"
+    "steam-user": "^4.20.2",
+    "steamapi": "^2.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^14.11.2",
     "@types/steam-user": "^4.20.0",
+    "@types/steamapi": "^2.2.2",
     "gts": "^3.1.0",
     "typescript": "^4.5.5"
   }
