--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^14.11.2",
     "@types/steam-user": "^4.20.0",
     "@types/steamapi": "^2.2.2",
+    "eslint-config-react-app": "^7.0.0",
     "gts": "^3.1.0",
     "typescript": "^4.5.5"
   }
