--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx tsc && node build/index.js",
+    "start": "npx tsc && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "gts lint",
     "clean": "gts clean",
@@ -29,6 +29,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "node-fetch": "^2.6.7",
+    "redis": "^4.0.3",
     "steam-user": "^4.20.2",
     "steamapi": "^2.2.0"
   },
