--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
-    "outDir": "build"
+    "outDir": "dist"
   },
   "include": [
     "src/**/*.ts",
