--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "node-fetch": "^2.6.7",
+    "passport": "^0.5.2",
+    "passport-steam": "^1.0.17",
     "redis": "^4.0.3",
     "steam-user": "^4.20.2",
     "steamapi": "^2.2.0"
@@ -35,6 +37,8 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^14.11.2",
+    "@types/passport": "^1.0.7",
+    "@types/passport-steam": "^1.0.1",
     "@types/steam-user": "^4.20.0",
     "@types/steamapi": "^2.2.2",
     "eslint-config-react-app": "^7.0.0",
